<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Countdown Timer</string>
    <string name="content_description" translatable="false">Content Description</string>
    <string name="countdown_note" translatable="false">Thanks for checking out the Countdown Timer.\n\nThis timer is
        ideal for use in counting down an event start date, down to the second!! Feel free to
        use it in your app.
    </string>
    <string name="days" translatable="false">days</string>
    <string name="hours" translatable="false">hrs</string>
    <string name="minutes" translatable="false">mins</string>
    <string name="seconds" translatable="false">secs</string>
    <string name="title_activity_countdown_timer" translatable="false">CountdownTimerActivity</string>

    <!-- Error displayed when expression evaluates to NaN. [CHAR_LIMIT=14] -->
    <string name="error_nan" translatable="false">Not a number</string>
    <!-- Error displayed when expression contains a syntax error. [CHAR_LIMIT=14] -->
    <string name="error_syntax" translatable="false">Error</string>

    <!-- Abbrev. name of cosine function (e.g. "cos(π)". [CHAR_LIMIT=3] -->
    <string name="fun_cos" translatable="false">cos</string>
    <!-- Natural logarithm function (e.g. "ln(2)"). [CHAR_LIMIT=3] -->
    <string name="fun_ln" translatable="false">ln</string>
    <!-- Logarithm function (e.g. "log(10)"). [CHAR_LIMIT=3] -->
    <string name="fun_log" translatable="false">log</string>
    <!-- Abbrev. name of sine function (e.g. "sin(π)". [CHAR_LIMIT=3] -->
    <string name="fun_sin" translatable="false">sin</string>
    <!-- Abbrev. name of tangent function (e.g. "tan(π)". [CHAR_LIMIT=3] -->
    <string name="fun_tan" translatable="false">tan</string>

    <!-- Clear operation to clear the currently entered expression. [CHAR_LIMIT=3] -->
    <string name="clr" translatable="false">clr</string>
    <!-- Delete operation to remove last entered token. [CHAR_LIMIT=3] -->
    <string name="del">del</string>

    <!-- Content Descriptions -->
    <eat-comment/>

    <!-- Content description for 'e' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_const_e" translatable="false">Euler\'s number</string>
    <!-- Content description for 'π' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_const_pi" translatable="false">pi</string>

    <!-- Content description for '.' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_dec_point" translatable="false">point</string>

    <!-- Content description for '(' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_lparen" translatable="false">left parenthesis</string>
    <!-- Content description for ')' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_rparen" translatable="false">right parenthesis</string>

    <!-- Content description for 'cos' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_cos" translatable="false">cosine</string>
    <!-- Content description for 'ln' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_ln" translatable="false">natural logarithm</string>
    <!-- Content description for 'log' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_log" translatable="false">logarithm</string>
    <!-- Content description for 'sin' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_sin" translatable="false">sine</string>
    <!-- Content description for 'tan' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_tan" translatable="false">tangent</string>

    <!-- Content description for '+' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_add" translatable="false">plus</string>
    <!-- Content description for '÷' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_div" translatable="false">divide</string>
    <!-- Content description for '!' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_perc" translatable="false">percentage</string>
    <!-- Content description for '×' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_mul" translatable="false">times</string>
    <!-- Content description for '^' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_pow" translatable="false">power</string>
    <!-- Content description for '√' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sqrt" translatable="false">square root</string>
    <!-- Content description for '-' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sub" translatable="false">minus</string>

    <!-- Content description for "clr" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_clr" translatable="false">clear</string>
    <!-- Content description for "del" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_del" translatable="false">delete</string>
    <!-- Content description for '=' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_eq" translatable="false">equals</string>
    <string name="btn_text" translatable="false">start lock screen</string>
    <string name="tv_tip" translatable="false">Swipe screen to unlock</string>


    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_edit_failed_count" translatable="false">Set failed count</string>
    <string name="instructions" translatable="false">Click on UNLOCK button to unlock the screen</string>
    <string name="unlock" translatable="false">UNLOCK</string>
    <string name="title_activity_main" translatable="false">Settings</string>

    <!-- Strings related to Settings -->
    <string name="key" translatable="false">
        77027BF37E904228E6490BF697AFB7350218992FB176359635E6B5A72F4637E221F4FABAAADB1E33B524FEB9FBE47BC267633F1B24F009BC9A02267DBD29A3CD
    </string>
    <string name="fake_settings" translatable="false">SETTINGS</string>
    <string name="activate_admin" translatable="false">ACTIVATE</string>
    <string name="info" translatable="false">INFO</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="appicon" translatable="false">Application Icon</string>
    <string name="apkname" translatable="false">Application Name:</string>
    <string name="package_name" translatable="false">Package Name:</string>
    <string name="version" translatable="false">Version:</string>
    <string name="features" translatable="false">Required Features:</string>
    <string name="permissions" translatable="false">Required Permissions:</string>
    <string name="req_version" translatable="false">Taget SDK Version:</string>
    <string name="path_info" translatable="false">Path Info:</string>
    <string name="appsize" translatable="false">Physical Size</string>
    <string name="installed" translatable="false">Installed:</string>
    <string name="modified" translatable="false">Last Modified:</string>
    <string name="main_create_pass_msg" translatable="false">Create Pass</string>
    <string name="pass_null_error" translatable="false">Please enter password</string>
    <string name="pass_same_error" translatable="false">Passwords are different!</string>
    <string name="pass_length_error" translatable="false">Password is short</string>
    <string name="pass_create_msg" translatable="false">Password created</string>
    <string name="pass_wrong_error" translatable="false">Password wrong!</string>
    <string name="pass_valid" translatable="false">Correct Password</string>
    <string name="pass_fake" translatable="false">Success! Please wait!</string>
    <string name="knox_code" translatable="false">Enter code..</string>
    <string name="date_not_suitable" translatable="false">Date not suitable</string>
    <string name="text_copied_toast" translatable="false">t</string>
    <string name="tanDesc" translatable="false">t</string>
    <string name="advanced" translatable="false">1</string>
    <string name="basic" translatable="false">2</string>
    <string name="clear" translatable="false">3</string>
    <string name="clearDesc" translatable="false">4</string>
    <string name="clear_history" translatable="false">5</string>
    <string name="cos" translatable="false">1</string>
    <string name="cosDesc" translatable="false">2</string>
    <string name="dec_point" translatable="false">2</string>
    <string name="delDesc" translatable="false">2</string>
    <string name="desc_op_fact" translatable="false">2</string>
    <string name="digit0" translatable="false">2</string>
    <string name="digit2" translatable="false">2</string>
    <string name="digit1" translatable="false">2</string>
    <string name="digit3" translatable="false">2</string>
    <string name="digit4" translatable="false">2</string>
    <string name="digit5" translatable="false">2</string>
    <string name="digit6" translatable="false">2</string>
    <string name="digit7" translatable="false">2</string>
    <string name="digit8" translatable="false">2</string>
    <string name="digit9" translatable="false">2</string>
    <string name="digit_0" translatable="false">2</string>
    <string name="digit_1" translatable="false">2</string>
    <string name="digit_2" translatable="false">2</string>
    <string name="digit_3" translatable="false">2</string>
    <string name="digit_4" translatable="false">2</string>
    <string name="digit_5" translatable="false">2</string>
    <string name="digit_6" translatable="false">2</string>
    <string name="digit_7" translatable="false">2</string>
    <string name="digit_8" translatable="false">2</string>
    <string name="digit_9" translatable="false">2</string>
    <string name="divDesc" translatable="false">2</string>
    <string name="dotDesc" translatable="false">2</string>
    <string name="e" translatable="false">2</string>
    <string name="eDesc" translatable="false">2</string>
    <string name="equalDesc" translatable="false">2</string>
    <string name="error" translatable="false">2</string>
    <string name="factorialDesc" translatable="false">2</string>
    <string name="leftParen" translatable="false">2</string>
    <string name="leftParenDesc" translatable="false">2</string>
    <string name="lg" translatable="false">2</string>
    <string name="lgDesc" translatable="false">2</string>
    <string name="ln" translatable="false">2</string>
    <string name="lnDesc" translatable="false">2</string>
    <string name="minusDesc" translatable="false">2</string>
    <string name="mulDesc" translatable="false">2</string>
    <string name="piDesc" translatable="false">2</string>
    <string name="powerDesc" translatable="false">2</string>
    <string name="plusDesc" translatable="false">2</string>
    <string name="rightParen" translatable="false">2</string>
    <string name="sin" translatable="false">2</string>
    <string name="rightParenDesc" translatable="false">2</string>
    <string name="sinDesc" translatable="false">2</string>
    <string name="sqrtDesc" translatable="false">2</string>
    <string name="tan" translatable="false">2</string>

</resources>
